--- a/index.html
+++ b/index.html
@@ -1,229 +1,139 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Invitation — Muhammad Zaid</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Birthday Invitation — Muhammad Zaid</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
     :root{
-      --blue:#1e90ff; /* theme blue */
-      --black:#0b0b0b;
+      --blue:#2f78c6;
+      --dark:#202225;
       --white:#ffffff;
-      --card-bg: linear-gradient(180deg, rgba(255,255,255,0.98), rgba(245,245,255,0.95));
-      --accent: rgba(30,144,255,0.12);
-      --radius:18px;
-      --max-width:820px;
-      color-scheme: light;
+      --card-bg:#fbfbfb;
+      --pad:28px;
     }
     *{box-sizing:border-box}
     body{
       margin:0;
+      font-family:Poppins,system-ui,Arial,sans-serif;
+      background:linear-gradient(180deg,var(--blue) 0%, #4a8bd3 100%);
       min-height:100vh;
-      display:grid;
-      place-items:center;
-      font-family:'Poppins',system-ui,Segoe UI,Roboto,-apple-system,"Helvetica Neue",Arial;
-      background: radial-gradient(circle at 10% 20%, rgba(30,144,255,0.06), transparent 10%), radial-gradient(circle at 90% 80%, rgba(0,0,0,0.04), transparent 12%), #f7f8fb;
+      display:flex;
+      align-items:center;
+      justify-content:center;
       padding:40px;
+      color:var(--dark);
     }
-
-    .card{
-      width:100%;
-      max-width:var(--max-width);
-      border-radius:var(--radius);
+    .invite{
       background:var(--card-bg);
-      box-shadow: 0 12px 30px rgba(10,10,20,0.08);
-      padding:28px;
+      width:920px;
+      max-width:96vw;
+      border-radius:10px;
+      padding:32px;
+      box-shadow:0 10px 30px rgba(0,0,0,0.12);
       position:relative;
       overflow:hidden;
-      border:1px solid rgba(20,20,30,0.04);
+      border:10px solid var(--blue);
     }
 
-    /* top ribbon */
-    .ribbon{
-      position:absolute;
-      left:-60px;
-      top:18px;
-      transform:rotate(-18deg);
-      background:linear-gradient(90deg,var(--black),var(--blue));
-      color:var(--white);
-      padding:8px 110px;
-      font-weight:700;
-      letter-spacing:1px;
-      box-shadow:0 6px 18px rgba(30,30,60,0.12);
-      border-radius:8px;
+    .bow{
+      display:flex;
+      justify-content:center;
+      margin-top:4px;
+      margin-bottom:2px;
     }
+    .bow svg{width:220px; height:auto}
 
-    .content{
-      display:grid;
-      grid-template-columns: 1fr 360px;
-      gap:28px;
-      align-items:start;
-    }
+    h1.greet{font-family:'Great Vibes', cursive; font-size:36px; text-align:center; margin:6px 0 18px;}
+    p.lead{ text-align:center; margin:0 0 12px; font-weight:400; font-size:18px;}
 
-    .main{
-      padding:10px 6px;
-    }
+    h2.name{font-size:52px; text-align:center; color:var(--blue); margin:6px 0 18px; font-weight:700}
 
-    h1{
-      margin:0 0 6px 0;
-      font-size:34px;
-      color:var(--black);
-      letter-spacing:0.4px;
-    }
-    .subtitle{
-      margin:0 0 18px 0;
-      color:#444;
+    .meta{display:flex; gap:18px; justify-content:center; align-items:center; margin-bottom:20px; flex-wrap:wrap}
+    .meta .item{display:flex; gap:10px; align-items:center; font-weight:600}
+    .meta .item .icon{width:28px; height:28px; display:grid; place-items:center; border-radius:6px; background:#fff; box-shadow:0 2px 6px rgba(0,0,0,0.06)}
+
+    .section{padding:12px 24px; margin:10px auto; max-width:820px}
+    .section h3{font-size:20px; margin:6px 0 10px}
+
+    .names{
+      font-size:18px;
+      line-height:1.6;
+      text-align:center;
+      color:var(--dark);
       font-weight:500;
     }
 
-    .name-badge{
-      display:inline-block;
-      background:linear-gradient(90deg,var(--blue),#0b63d6);
-      color:var(--white);
-      padding:10px 18px;
-      border-radius:30px;
-      font-weight:800;
-      font-size:18px;
-      box-shadow:0 8px 20px rgba(30,144,255,0.14);
-      margin-bottom:18px;
-    }
+    .theme{display:flex;justify-content:center;gap:12px;align-items:center;margin:16px 0}
+    .swatch{width:28px;height:28px;border-radius:50%;box-shadow:0 3px 8px rgba(0,0,0,0.12)}
 
-    .details{
-      display:flex;
-      gap:12px;
-      flex-wrap:wrap;
-      margin-bottom:18px;
-    }
-    .chip{
-      background:var(--accent);
-      color:var(--black);
-      padding:10px 12px;
-      border-radius:10px;
-      font-weight:600;
-      min-width:fit-content;
-    }
+    .message{ text-align:center; font-size:17px; margin-top:6px; color:#111}
 
-    .cousins{
-      margin-top:6px;
-      display:flex;
-      gap:8px;
-      flex-wrap:wrap;
-    }
-    .person{
-      background:transparent;
-      border:1px dashed rgba(30,30,40,0.06);
-      padding:8px 10px;
-      border-radius:8px;
-      font-weight:600;
-      font-size:13px;
-      color:#111;
-      backdrop-filter: blur(2px);
-    }
+    .thank{font-family:'Great Vibes'; font-size:38px; text-align:center; margin-top:18px}
 
-    .side{
-      background: linear-gradient(180deg, rgba(255,255,255,0.75), rgba(250,250,255,0.8));
-      padding:18px;
-      border-radius:12px;
-      border:1px solid rgba(20,20,30,0.03);
-      height:100%;
-    }
+    /* decorative confetti */
+    .confetti{position:absolute; width:100%; height:100%; pointer-events:none}
+    .confetti span{position:absolute; display:block}
+    .c1{width:10px;height:10px;background:var(--blue); border-radius:50%}
+    .c2{width:8px;height:8px;background:#111;border-radius:50%}
+    .c3{width:12px;height:12px;background:#79aef0;border-radius:50%}
 
-    .theme{
-      display:flex;
-      gap:8px;
-      align-items:center;
-      margin-bottom:12px;
-    }
-    .swatch{width:26px;height:26px;border-radius:6px;border:1px solid rgba(0,0,0,0.06)}
-    .sw-blue{background:var(--blue)}
-    .sw-black{background:var(--black)}
-    .sw-white{background:var(--white);box-shadow:inset 0 0 0 1px rgba(0,0,0,0.06)}
-
-    .cta{display:flex;gap:10px;margin-top:18px}
-    .btn{
-      padding:10px 14px;
-      border-radius:10px;
-      font-weight:700;
-      border:none;
-      cursor:pointer;
-      font-size:14px;
-    }
-    .btn-primary{background:var(--blue);color:var(--white);box-shadow:0 8px 20px rgba(30,144,255,0.14)}
-    .btn-ghost{background:transparent;border:1px solid rgba(20,20,30,0.06)}
-
-    .footer-note{font-size:13px;color:#666;margin-top:10px}
-
-    /* responsive */
-    @media (max-width:880px){
-      .content{grid-template-columns:1fr}
-      .ribbon{left:-30px;padding:8px 86px}
-    }
-
-    @media print{
-      body{background:transparent;padding:0}
-      .card{box-shadow:none;border:none}
-      .ribbon{display:none}
+    @media (max-width:560px){
+      h2.name{font-size:36px}
+      .bow svg{width:160px}
+      h1.greet{font-size:28px}
     }
   </style>
 </head>
 <body>
-  <div class="card" role="article" aria-label="Birthday invitation for Muhammad Zaid">
-    <div class="ribbon">You're invited</div>
-    <div class="content">
-      <div class="main">
-        <div class="name-badge">Birthday Celebration</div>
-        <h1>Muhammad Zaid</h1>
-        <p class="subtitle">Assalamualaikum — You are warmly invited to celebrate the birthday of our beloved.</p>
+  <article class="invite">
+    <div class="confetti" aria-hidden="true">
+      <span class="c1" style="top:18px;left:28px"></span>
+      <span class="c2" style="top:30px;left:82px"></span>
+      <span class="c3" style="top:50px; right:40px"></span>
+      <span class="c1" style="bottom:28px; left:40px"></span>
+      <span class="c2" style="bottom:60px; right:80px"></span>
+    </div>
 
-        <div class="details">
-          <div class="chip">📅 16th November</div>
-          <div class="chip">⏰ 11:30 AM</div>
-          <div class="chip">📍 Home (bring smiles!)</div>
-        </div>
+    <div class="bow" role="img" aria-label="bow decorative">
+      <!-- simple blue bow svg -->
+      <svg viewBox="0 0 200 70" xmlns="http://www.w3.org/2000/svg" aria-hidden>
+        <g fill="none" fill-rule="evenodd">
+          <path d="M100 6c28 0 48 22 48 30 0 8-20 30-48 30S52 44 52 36c0-8 20-30 48-30z" fill="#2f78c6"/>
+          <path d="M100 16c10 0 20 6 24 10-4 4-14 10-24 10s-20-6-24-10c4-4 14-10 24-10z" fill="#2a66a8" opacity="0.6"/>
+        </g>
+      </svg>
+    </div>
 
-        <h3 style="margin-top:8px;margin-bottom:6px">Special Invitation to All Dear Cousins</h3>
-        <div class="cousins" aria-label="List of cousins">
-          <div class="person">Abdullah</div>
-          <div class="person">Ayan</div>
-          <div class="person">Anusha</div>
-          <div class="person">Abdul Rahman</div>
-          <div class="person">Alishba</div>
-          <div class="person">Usman</div>
-          <div class="person">Ahmed</div>
-          <div class="person">Azan</div>
-          <div class="person">Muskan</div>
-          <div class="person">Jannat</div>
-          <div class="person">Aymen Hassan</div>
-          <div class="person">Dawood</div>
-          <div class="person">Suban</div>
-          <div class="person">Umme Habiba</div>
-        </div>
+    <h1 class="greet">Assalamualaikum,</h1>
+    <p class="lead">You are warmly invited to celebrate the birthday of our beloved</p>
 
-        <p class="footer-note">Come join us for a joyful and memorable celebration. We look forward to having you with us.</p>
+    <h2 class="name">Muhammad Zaid</h2>
+
+    <div class="meta">
+      <div class="item"><span class="icon">📅</span><span>16th November</span></div>
+      <div class="item"><span class="icon">⏰</span><span>11:30 AM</span></div>
+    </div>
+
+    <section class="section">
+      <h3 style="text-align:center; font-weight:700">Special Invitation to All Dear Cousins:</h3>
+      <p class="names">
+        Abdullah, Abdul Sattar, Ayan, Anusha, Abdul Rahman, Alishba, Usama, Usman, Areeba Ahmed,
+        Azan, Muskan, Jannat, Sufyan, Aymen Hassan, Dawood, Suban, Umme Habiba
+      </p>
+
+      <div class="theme">
+        <strong>Theme Colors:</strong>
+        <div class="swatch" style="background:var(--blue)"></div>
+        <div class="swatch" style="background:#111"></div>
+        <div class="swatch" style="background:#fff; border:1px solid #e2e2e2"></div>
       </div>
 
-      <aside class="side" aria-label="Invitation details and actions">
-        <h3 style="margin:0 0 8px 0">Theme Colors</h3>
-        <div class="theme">
-          <div class="swatch sw-blue" title="Blue"></div>
-          <div class="swatch sw-black" title="Black"></div>
-          <div class="swatch sw-white" title="White"></div>
-        </div>
+      <p class="message">Come join us for a joyful and memorable celebration. We look forward to having you with us.</p>
 
-        <p style="margin-top:8px;font-weight:600">Hosts</p>
-        <p style="margin:6px 0 12px 0">Family of Muhammad Zaid</p>
-
-        <div style="border-radius:10px;padding:10px;background:rgba(30,144,255,0.04);font-size:14px">
-          <strong>When:</strong> 16th November — 11:30 AM<br>
-          <strong>Where:</strong> At home
-        </div>
-
-        
-
-        <p class="footer-note">Thank you.</p>
-      </aside>
-    </div>
-  </div>
+      <p class="thank">Thank you..</p>
+    </section>
+  </article>
 </body>
 </html>
